# backend-prac-turing-machine

./: .gitmodules  CMakeLists.txt  button.cpp  button.h  center_positioned_string.h  general_data.cpp  general_data.h  inoutput_field.cpp  inoutput_field.h  main.cpp  rounded_rectangle.cpp  rounded_rectangle.h  table.cpp  table.h  tape.cpp  turing_machine.cpp  turing_machine.h  window.cpp  window.h  window_manager.cpp  window_manager.h
app/: colors.h  general_data.h  window.h  window_manager.h
core/: CMakeLists.txt  monomial.h  parser.h  polynomial.h  single_linked_list.h
elements/: button.h  center_positioned_string.h  inoutput_field.h  rounded_rectangle.h  table.h  tape.h  tape_head.h
src/: button.cpp  center_positioned_string.cpp  colors.cpp  general_data.cpp  inoutput_field.cpp  monomial.cpp  polynomial.cpp  rounded_rectangle.cpp  single_linked_list.cpp  table.cpp  tape.cpp  tape_head.cpp  turing_machine.cpp  window.cpp  window_manager.cpp
