cmake_minimum_required(VERSION 3.27)
project(prac-polynom-operator)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_GLIBCXX_DEBUG -D_GLIBCXX_DEBUG_PEDANTIC -std=c++20")


add_subdirectory(../backend-prac-turing-machine/core)

add_executable(${PROJECT_NAME}
        main.cpp
)

target_link_libraries(${PROJECT_NAME} polynom)
